--- a/www/source/scss/base/root.scss
+++ b/www/source/scss/base/root.scss
@@ -13,6 +13,6 @@ a{
 
 body{
   font-size: 62.5%;
-  background: url("../images/grid.png")no-repeat center;
-  opacity: 0.7;
+  //background: url("../images/grid.png")no-repeat center;
+  //opacity: 0.7;
 }
