--- a/www/source/scss/object/_header.scss
+++ b/www/source/scss/object/_header.scss
@@ -35,7 +35,7 @@
 }
 .search{
   &__box{
-    margin-left: 1em;
+    margin-right: 1em;
   }
   &__submit{
     position: absolute;
@@ -47,6 +47,124 @@
     &:hover{
       cursor: pointer;
       transform: rotate(45deg);
+    }
+  }
+}
+
+@media only screen and (max-width:1215px) {
+  .menu{
+    &__content{
+      margin-left: 1em;
+    }
+  }
+}
+@media only screen and (max-width:1169px) {
+  .menu{
+    &__element{
+      font-size: 0.8em;
+    }
+  }
+}
+
+@media only screen and (max-width: 1027px) {
+
+
+  // MENU RESPONSIVE
+  .header{
+    position: static;
+    &__search{
+      float:right;
+      margin-top: 3em;
+    }
+    &__burger{
+      position: relative;
+      display: block;
+      float: left;
+      width: 50px;
+      height: 66px;
+      &::after{
+        content: '';
+        position: absolute;
+        display: block;
+        width: 1rem;
+        height: 0;
+        top: 30px;
+        left: 0px;
+        box-shadow:(0 10px 0 1px black, 0 16px 0 1px black, 0 22px 0 1px black);
+      }
+    }
+  }
+  .site-container{
+    height:100%;
+  }
+  .site-pusher{
+    height: 100%;
+    position: absolute;
+    width: 100%;
+    transition: transform .3s cubic-bezier(.42,.52,.87,.55);
+  }
+  .menu{
+    &__list{
+      position: absolute;
+      top:0;
+      bottom:0;
+      left:0;
+      width: 250px;
+      transform: translateX(-250px);
+      -webkit-transition: transform 1s ease-in;
+    }
+    &__element{
+      display: block;
+    }
+    &__link{
+      display: block;
+      height: 40px;
+      line-height: 40px;
+    }
+  }
+  .site-content{
+     position: absolute;
+     top: 110px;
+     right: 0;
+     left: 0;
+     bottom: 0;
+     padding-top: 0;
+    }
+  .with--sidebar{
+    overflow: hidden;
+    height: 100%;
+    .site-pusher{
+      transform: translateX(250px);
+    }
+    .site-cache {
+      position: absolute;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      background-color: rgba(0,0,0,0.6);
+}
+  }
+}
+
+
+@media screen and (max-width:478px){
+  .header{
+    &__img{
+      display: none;
+    }
+    &__logolink{
+      display: block;
+      margin-top:0.6em;
+    }
+  }
+}
+
+@media screen and (max-width:366px){
+  .header{
+    &__logolink{
+      font-size:0.55em;
+      margin-top:1.5em;
     }
   }
 }
