--- a/www/views/header.pug
+++ b/www/views/header.pug
@@ -1,24 +1,33 @@
 
-header.header
-  div.header__content
-    nav.header__menu
-      h1.header__logo
-        a(href="index.html").header__logolink
-          img.header__img(src="images/logo.jpg",width="76",height="57",alt="Logo de espaceP")
-          ="Espace P..."
-          span.hidden="- Accueil"
-      div.menu__content
-        ul.menu__list
-          li.menu__element
-            a.menu__link(href="actu.html", title="Vers la page actualité")="Actualité"
-          li.menu__element
-            a.menu__link(href="rapport.html", title="Vers la page rapport d'activité")="Rapport D'activités"
-          li.menu__element
-            a.menu__link(href="contact.html",title="Vers la page contact")="Contact"
-          li.menu__element
-            a.menu__link(href="manifeste.html",title="Vers la page manifeste")="Manifeste"
-          li.menu__element
-            a.menu__link(href="soutenir.html",title="Vers la page de soutien")="Soutenir"
+div.site-container
+  div.site-pusher
+    header.header
+     div.header__content
+      nav.header__menu
+        a.header__burger#header__burger(href="#", title="Voir le menu")
+          span.hidden="Menu"
+        h1.header__logo
+          a(href="index.html").header__logolink
+            img.header__img(src="images/logo.jpg",width="76",height="57",alt="Logo de espaceP")
+            ="Espace P..."
+            span.hidden="- Accueil"
+        div.menu__content
+          ul.menu__list
+            li.menu__element
+              a.menu__link(href="actu.html", title="Vers la page actualité")="Actualité"
+            li.menu__element
+              a.menu__link(href="rapport.html", title="Vers la page rapport d'activité")="Rapport D'activités"
+            li.menu__element
+              a.menu__link(href="contact.html",title="Vers la page contact")="Contact"
+            li.menu__element
+              a.menu__link(href="manifeste.html",title="Vers la page manifeste")="Manifeste"
+            li.menu__element
+              a.menu__link(href="soutenir.html",title="Vers la page de soutien")="Soutenir"
         form.header__search(method="get",action="/")
           input.search__box(type="search",placeholder="Recherche",name="search")
           input.search__submit(type="submit", value="")
+    div.site-content
+      div.site-container
+        h2="Responsive Navigation Bar"
+
+    div.site-cache#site-cache
