--- a/www/views/index.pug
+++ b/www/views/index.pug
@@ -10,5 +10,6 @@ html(lang="fr")
         title= "EspaceP... - Accueil"
         link(rel='stylesheet', href='css/main.css', type='text/css')
 include header.pug
-body
-  
+
+script(src="https://code.jquery.com/jquery-3.1.1.min.js")
+script(src="script/script.js")
