--- a/www/source/scss/main.scss
+++ b/www/source/scss/main.scss
@@ -22,6 +22,8 @@
 
 // 5. Objects - Éléments de mise en forme non-cosmétique
 @import "object/header";
+@import "object/mainimage";
 
 // 6. Components - Design des composants, morceaux d'UI
 @import "components/header";
+@import "components/mainimage";
