--- a/www/source/scss/object/_header.scss
+++ b/www/source/scss/object/_header.scss
@@ -90,12 +90,9 @@
         height: 0;
         top: 30px;
         left: 0px;
-        box-shadow:(0 10px 0 1px black, 0 16px 0 1px black, 0 22px 0 1px black);
+        box-shadow:(0 10px 0 1px $black, 0 16px 0 1px $black, 0 22px 0 1px $black);
       }
     }
-  }
-  .site-container{
-    height:100%;
   }
   .site-pusher{
     height: 100%;
@@ -124,7 +121,7 @@
   }
   .site-content{
      position: absolute;
-     top: 110px;
+     top:90px;
      right: 0;
      left: 0;
      bottom: 0;
