--- a/www/views/header.pug
+++ b/www/views/header.pug
@@ -3,14 +3,15 @@ div.site-container
   div.site-pusher
     header.header
      div.header__content
+      h1.hidden="EspaceP... - Accueil"
       nav.header__menu
         a.header__burger#header__burger(href="#", title="Voir le menu")
           span.hidden="Menu"
-        h1.header__logo
+        h2.header__logo
           a(href="index.html").header__logolink
-            img.header__img(src="images/logo.jpg",width="76",height="57",alt="Logo de espaceP")
+            img.header__img(src="images/logo.jpg",width="76",height="57")
             ="Espace P..."
-            span.hidden="- Accueil"
+            span.hidden="- Navigation"
         div.menu__content
           ul.menu__list
             li.menu__element
