--- a/www/views/index.pug
+++ b/www/views/index.pug
@@ -18,5 +18,12 @@ html(lang="fr")
           a.mainimage__link(href="#menu",title="Vers le menu principal de choix des sections")
             span="Vers le menu principal"
 
+        section.news
+          div.news__content
+            h2.news__title="Actualité"
+            time.news__time(pubtime)="Le 14 Janvier 2016"
+            p.news__text="Le 17 Décembre est la journée internationale de lutte contreles violences faites aux travailleurs du sexe. Le ministère vient de voter la loi qui sera d’application le 20 Janvier 2017."
+            a.news__button(href="actu.html")="Vers l'article"
+
 script(src="https://code.jquery.com/jquery-3.1.1.min.js")
 script(src="script/script.js")
