--- a/www/source/scss/main.scss
+++ b/www/source/scss/main.scss
@@ -23,7 +23,9 @@
 // 5. Objects - Éléments de mise en forme non-cosmétique
 @import "object/header";
 @import "object/mainimage";
+@import "object/news";
 
 // 6. Components - Design des composants, morceaux d'UI
 @import "components/header";
 @import "components/mainimage";
+@import "components/news";
