--- a/www/source/scss/main.scss
+++ b/www/source/scss/main.scss
@@ -24,8 +24,10 @@
 @import "object/header";
 @import "object/mainimage";
 @import "object/news";
+@import "object/navigation";
 
 // 6. Components - Design des composants, morceaux d'UI
 @import "components/header";
 @import "components/mainimage";
 @import "components/news";
+@import "components/navigation";
