--- a/www/views/index.pug
+++ b/www/views/index.pug
@@ -12,18 +12,11 @@ html(lang="fr")
     include header.pug
 
       main
-        section.mainimage
-          h2.mainimage__title="Prostitution admise"
-          p.mainimage__subtitle="Pour une approche plus juste des métiers du sexe."
-          a.mainimage__link(href="#menu",title="Vers le menu principal de choix des sections")
-            span="Vers le menu principal"
+        include _mainimage.pug
 
-        section.news
-          div.news__content
-            h2.news__title="Actualité"
-            time.news__time(pubtime)="Le 14 Janvier 2016"
-            p.news__text="Le 17 Décembre est la journée internationale de lutte contreles violences faites aux travailleurs du sexe. Le ministère vient de voter la loi qui sera d’application le 20 Janvier 2017."
-            a.news__button(href="actu.html")="Vers l'article"
+        include _news.pug
+
+        include _navigation.pug
 
 script(src="https://code.jquery.com/jquery-3.1.1.min.js")
 script(src="script/script.js")
