--- a/www/views/_navigation.pug
+++ b/www/views/_navigation.pug
@@ -1,28 +1,53 @@
 
-section.navigation
+section.navigation#menu
   h2.navigation__title.hidden="Choississez votre profil"
   div.navigation__container
     article.profil.profil--tds
+      h3.profil__title="Travailleur du sexe"
       div.profil__box
-        h3.profil__tile="Travailleur du sexe"
         ul.profil__list
-          li.profil__element
+          li.profil__element.profil__element--tds
             a.profil__link(href="#")="Nos services"
-          li.profil__element
+          li.profil__element.profil__element--tds
             a.profil__link(href="#")="La législation sur la prostitution"
-          li.profil__element
+          li.profil__element.profil__element--tds
             a.profil__link(href="#")="Infos vaccination et dépistage"
-          li.profil__element
+          li.profil__element.profil__element--tds
             a.profil__link(href="#")="Demander le passage d'une équipe"
-          li.profil__element
+          li.profil__element.profil__element--tds
             a.profil__link(href="#")="Retrouver votre code de vaccination"
-          li.profil__element
+          li.profil__element.profil__element--tds
             a.profil__link(href="#")="Quand la capote éclate"
-          li.profil__element
+          li.profil__element.profil__element--tds
             a.profil__link(href="#")="Fellation sans préservatif"
-          li.profil__element
+          li.profil__element.profil__element--tds
             a.profil__link(href="#")="Hygiène du vagin"
-          li.profil__element
+          li.profil__element.profil__element--tds
             a.profil__link(href="#")="Brochure ( PDF en téléchargement)"
     article.profil.profil--etudiants
-      div.profil__box
+      h3.profil__title="Étudiants"
+      p.profil__text="Pour toute question concernant un stage, une intervention scolaire ou si vous avez simplement des interrogations sur nos actions, consultez cette section"
+      div.profil__box.profil__box--etudiants
+        ul.profil__list
+          li.profil__element.profil__element--etudiants
+            a.profil__link(href="#")="Nos actions"
+          li.profil__element.profil__element--etudiants
+            a.profil__link(href="#")="Notre philosophie"
+          li.profil__element.profil__element--etudiants
+            a.profil__link(href="#")="Le point sur notre législation et les autres"
+          li.profil__element.profil__element--etudiants
+            a.profil__link(href="#")="Infos stage et intervention scolaire"
+    article.profil.profil--sympathisant
+      h3.profil__title="Sympathisant"
+      p.profil__text="Vous êtes un sympathisant ou vous avez entendu parlé de nous par hasard et vous voulez en savoir plus sur notre association ou adhérez à notre manifeste, vous êtes au bon endroits"
+      div.profil__box.profil__box--sympathisant
+        ul.profil__list
+          li.profil__element.profil__element--sympathisant
+            a.profil__link(href="#")="Points fort de notre manifeste"
+          li.profil__element.profil__element--sympathisant
+            a.profil__link(href="#")="Le point sur notre législation et les autres"
+    article.profil.profil--clients
+      h3.profil__title="Clients"
+      p.profil__text="Vous êtes un client et vous avez des droits mais vous avez aussi des obligations et des précautions à prendre de votre côtés pour que tout se passe dans le respect de chaqu’un. Vous trouverez ici un petit guide du client pour en apprendre d’avantage."
+      div.profil__box.profil__box--clients
+        a.profil__button(href="#")="Guide du clients"
