--- a/www/views/index.pug
+++ b/www/views/index.pug
@@ -17,6 +17,8 @@ html(lang="fr")
         include _news.pug
 
         include _navigation.pug
+        
+      include _footer.pug
 
 script(src="https://code.jquery.com/jquery-3.1.1.min.js")
 script(src="script/script.js")
