--- a/www/source/scss/main.scss
+++ b/www/source/scss/main.scss
@@ -25,9 +25,11 @@
 @import "object/mainimage";
 @import "object/news";
 @import "object/navigation";
+@import "object/footer";
 
 // 6. Components - Design des composants, morceaux d'UI
 @import "components/header";
 @import "components/mainimage";
 @import "components/news";
 @import "components/navigation";
+@import "components/footer";
