--- a/www/views/_footer.pug
+++ b/www/views/_footer.pug
@@ -1,4 +1,89 @@
-footer
+footer.footer
 
-  div.footer__menu
-    
+  section.footer__menu
+    h2.footer__title="Menu"
+      span.hidden=" Secondaire"
+    ul.footer__list
+      li.footer__element
+        a.footer__link(href="actu.html",title="Aller a la page actualité")="Actualité"
+      li.footer__element
+        a.footer__link(href="rapport.html",title="Aller a la page actualité")="Rapport d'activité"
+      li.footer__element
+        a.footer__link(href="manifeste.html",title="Aller a la page manifeste")="Manifeste"
+      li.footer__element
+        a.footer__link(href="contact.html",title="Aller a la page contact")="Contact"
+      li.footer__element
+        a.footer__link(href="soutenir.html",title="Aller a la page soutenir")="Soutenir"
+      li.footer__element
+        a.footer__link(href="tds.html",title="Aller a la page travailleur du sexe")="Travailleur du sexe"
+      li.footer__element
+        a.footer__link(href="etudiants.html",title="Aller a la page étudiants")="Étudiants"
+      li.footer__element
+        a.footer__link(href="sympathisant.html",title="Aller a la page sympathisant")="Sympathisant"
+      li.footer__element
+        a.footer__link(href="clients.html",title="Aller a la page clients")="Clients"
+      li.footer__element.footer__element--button
+        a.footer__link.footer__link--button(href="http://facebook.com",title="Aller vers notre page facebook")="Facebook"
+
+
+  section.footer__information
+    h2.information__title.hidden="Information de contact"
+    div.information__container.information__container--left
+      section.information__content
+        h3.information__subtitle="Bruxelles"
+        ul.information__list
+          li.information__element
+            a.information__link(href="tel:022199874 ",title="Nous téléphoner?")="Tel: 02/219 98 74 "
+          li.information__element
+            a.information__link(href="mailto:espacepbxl@hotmail.com",title="Nous envoyer un email")="Mail: espacepbxl@hotmail.com"
+          li.information__element.information__element--adresse="Adresse : 116, rue des Plantes 1030 Bruxelles"
+
+
+      section.information__content
+        h3.information__subtitle="Namur"
+        ul.information__list
+          li.information__element
+            a.information__link(href="tel:022199874 ",title="Nous téléphoner?")="Tel: 081/77 68 21$"
+          li.information__element
+            a.information__link(href="mailto:espacepnamur@gmail.com",title="Nous envoyer un email")="Mail: espacepnamur@gmail.com"
+          li.information__element.information__element--adresse="Adresse : 4, rue du Docteur Haibe 5002 Namur"
+
+
+    div.information__container.information__container--center
+      section.information__content
+        h3.information__subtitle="Charleroi"
+        ul.information__list
+          li.information__element
+            a.information__link(href="tel:042210509 ",title="Nous téléphoner?")="Tel: 04/ 221 05 09 "
+          li.information__element
+            a.information__link(href="mailto:espacepliege@gmail.com",title="Nous envoyer un email")="Mail: espacepliege@gmail.com"
+          li.information__element.information__element--adresse="Adresse : 116, rue des Plantes 1030 Bruxelles"
+
+      section.information__content
+        h3.information__subtitle="Liège"
+        ul.information__list
+          li.information__element
+            a.information__link(href="tel:042210509 ",title="Nous téléphoner?")="Tel: 04/ 221 05 09 "
+          li.information__element
+            a.information__link(href="mailto:espacepbxl@hotmail.com",title="Nous envoyer un email")="Mail: espacepbxl@hotmail.com"
+          li.information__element.information__element--adresse="Adresse :50, rue Souverain-Pont 4000 Liège"
+
+    div.information__container.information__container--center
+      section.information__content
+        h3.information__subtitle="Mons"
+        ul.information__list
+          li.information__element
+            a.information__link(href="tel:022199874 ",title="Nous téléphoner?")="Tel: 071/30 98 10 "
+          li.information__element
+            a.information__link(href="mailto:espacepcharleroi@hotmail.com",title="Nous envoyer un email")="Mail: espacepcharleroi@hotmail.com"
+          li.information__element.information__element--adresse="Adresse : 3, rue Désandrouin – 6000 Charleroi"
+
+
+      section.information__content
+        h3.information__subtitle="Arlon"
+        ul.information__list
+          li.information__element
+            a.information__link(href="tel:0474138654",title="Nous téléphoner?")="Tel: 0474 13 86 54 "
+          li.information__element
+            a.information__link(href="mailto:espaceparlon@gmail.com",title="Nous envoyer un email")="Mail: espaceparlon@gmail.com"
+          li.information__element.information__element--adresse="Adresse : Maison Médicale «Porte Sud», 88 rue de Bastogne à Arlon."
