Adding 4 new link in the menu ! amazing

--- a/www/source/scss/object/_header.scss
+++ b/www/source/scss/object/_header.scss
@@ -155,6 +155,10 @@
       margin-top:0.6em;
     }
   }
+  .none{
+    display: block;
+    position: static;
+  }
 }
 
 @media screen and (max-width:366px){
