--- a/www/views/header.pug
+++ b/www/views/header.pug
@@ -24,6 +24,14 @@ div.site-container
               a.menu__link(href="manifeste.html",title="Vers la page manifeste")="Manifeste"
             li.menu__element
               a.menu__link(href="soutenir.html",title="Vers la page de soutien")="Soutenir"
+            li.menu__element.none
+              a.menu__link.none(href="tds.html",title="Vers la page travailleur du sexe")="Travailleur du sexe"
+              li.menu__element.none
+                a.menu__link.none(href="etudiant.html",title="Vers la page etudiant")="Étudiants"
+              li.menu__element.none
+                a.menu__link.none(href="clients.html",title="Vers la page client")="Clients"
+              li.menu__element.none
+                a.menu__link.none(href="sympathisant.html",title="Vers la page etudiant")="Sympathisant"
         form.header__search(method="get",action="/")
           input.search__box(type="search",placeholder="Recherche",name="search")
           input.search__submit(type="submit", value="")
