--- a/www/source/scss/components/_header.scss
+++ b/www/source/scss/components/_header.scss
@@ -84,5 +84,12 @@
           cursor: pointer;
         }
       }
+      &__link{
+        &:hover:after{
+          height: 0;
+          background: none;
+          width: 0;
+        }
+      }
     }
 }
