Adding Facebook section

--- a/www/source/scss/main.scss
+++ b/www/source/scss/main.scss
@@ -26,6 +26,8 @@
 @import "object/news";
 @import "object/navigation";
 @import "object/footer";
+@import "object/headActu";
+@import "object/facebook";
 
 // 6. Components - Design des composants, morceaux d'UI
 @import "components/header";
@@ -33,3 +35,5 @@
 @import "components/news";
 @import "components/navigation";
 @import "components/footer";
+@import "components/headActu";
+@import "components/facebook";
