Adding actuality page ( no responsive )

--- a/www/source/scss/components/_facebook.scss
+++ b/www/source/scss/components/_facebook.scss
@@ -33,6 +33,7 @@
    &__text{
      font-size: 1.6em;
      line-height: 1.4em;
+     padding-bottom: 3em;
    }
    &__button{
       font-size: 1.4em;
