--- a/www/source/scss/main.scss
+++ b/www/source/scss/main.scss
@@ -28,6 +28,7 @@
 @import "object/footer";
 @import "object/headActu";
 @import "object/facebook";
+@import "object/actuality";
 
 // 6. Components - Design des composants, morceaux d'UI
 @import "components/header";
@@ -37,3 +38,4 @@
 @import "components/footer";
 @import "components/headActu";
 @import "components/facebook";
+@import "components/actuality";
