--- a/www/source/scss/base/root.scss
+++ b/www/source/scss/base/root.scss
@@ -13,11 +13,11 @@ a{
 
 body{
   font-size: 62.5%;
-  background: url("../images/grid.png")repeat-y center;
-  opacity: 0.7;
+  //background: url("../images/grid.png")repeat-y center;
+  //opacity: 0.7;
 }
 
 .maincontainer{
-  width: 86.3%;
+  width: 87.3%;
   margin: auto;
 }
