--- a/www/source/scss/object/_actuality.scss
+++ b/www/source/scss/object/_actuality.scss
@@ -1,6 +1,6 @@
 /* EspaceP
  *
- * /sass/components/facebook.scss - Facebook Object
+ * /sass/components/facebook.scss - Actuality Object
  *
  * coded by Dylan Schirino
  * started at 06/10/2016
@@ -49,3 +49,56 @@
      width: 45.3125em;
    }
  }
+
+@media screen and (max-width:1075px) {
+
+      .actuality{
+        &__title{
+          text-align: center;
+          margin-left: 0;
+        }
+        &__etiquette{
+          display: block;
+          width:90%;
+          margin:2em auto;
+        }
+      }
+      .etiquette{
+        &__title{
+            text-align: center;
+            padding-bottom: 1em;
+        }
+        &__element{
+          text-align: center;
+          &--facebook,&--twitter{
+            display: block;
+            text-align: center;
+            margin:0;
+          }
+        }
+      }
+
+    .article{
+      &__text,&__title{
+        float: none;
+      }
+      &__title{
+        text-align: center;
+      }
+      &__text{
+        width: 90%;
+        margin:2em auto;
+      }
+    }
+
+}
+
+@media screen and (max-width:692px) {
+
+  .actuality{
+    &__etiquette{
+      margin-right: 2em;
+    }
+  }
+
+}
