Adding Soutien page until partenaire section

--- a/www/source/scss/main.scss
+++ b/www/source/scss/main.scss
@@ -29,6 +29,9 @@
 @import "object/headActu";
 @import "object/facebook";
 @import "object/actuality";
+@import "object/headSoutien";
+@import "object/mainSoutien";
+@import "object/partenaire";
 
 // 6. Components - Design des composants, morceaux d'UI
 @import "components/header";
@@ -39,3 +42,6 @@
 @import "components/headActu";
 @import "components/facebook";
 @import "components/actuality";
+@import "components/headSoutien";
+@import "components/mainSoutien";
+@import "components/partenaire";
