--- a/www/source/scss/base/root.scss
+++ b/www/source/scss/base/root.scss
@@ -13,8 +13,8 @@ a{
 
 body{
   font-size: 62.5%;
-  //background: url("../images/grid.png")repeat-y center;
-  //opacity: 0.7;
+  background: url("../images/grid.png")repeat-y center;
+  opacity: 0.7;
 }
 
 .maincontainer{
