--- a/www/views/template/_footer.pug
+++ b/www/views/template/_footer.pug
@@ -87,3 +87,5 @@ footer.footer
           li.information__element
             a.information__link(href="mailto:espaceparlon@gmail.com",title="Nous envoyer un email")="Mail: espaceparlon@gmail.com"
           li.information__element.information__element--adresse="Adresse : Maison Médicale «Porte Sud», 88 rue de Bastogne à Arlon."
+script(src="https://code.jquery.com/jquery-3.1.1.min.js")
+script(src="script/script.js")
