--- a/www/source/scss/object/_mainSoutien.scss
+++ b/www/source/scss/object/_mainSoutien.scss
@@ -31,7 +31,7 @@
     }
   }
   &__float{
-    width: 100%;
+    width: 91%;
     &::after{
       content: "";
       display: block;
@@ -39,7 +39,7 @@
     }
   }
   &__input{
-    width: 100%;
+    width: 90%;
     margin-bottom:2em;
   }
   &__container{
@@ -68,4 +68,17 @@
     width: 15.625em;
     height: 3.6em;
   }
+}
+
+
+@media screen and (max-width:971px) {
+
+  .explain{
+    &__text,&__formulaire{
+      float: none;
+      width: 90%;
+      margin:2em auto;
+    }
+  }
+
 }
