Adding Contact page with responsive

--- a/www/source/scss/main.scss
+++ b/www/source/scss/main.scss
@@ -32,6 +32,7 @@
 @import "object/headSoutien";
 @import "object/mainSoutien";
 @import "object/partenaire";
+@import "object/mainContact";
 
 // 6. Components - Design des composants, morceaux d'UI
 @import "components/header";
@@ -45,3 +46,4 @@
 @import "components/headSoutien";
 @import "components/mainSoutien";
 @import "components/partenaire";
+@import "components/mainContact";
