Adding rapport page with responsive

--- a/www/source/scss/main.scss
+++ b/www/source/scss/main.scss
@@ -33,6 +33,7 @@
 @import "object/mainSoutien";
 @import "object/partenaire";
 @import "object/mainContact";
+@import "object/rapport";
 
 // 6. Components - Design des composants, morceaux d'UI
 @import "components/header";
@@ -47,3 +48,4 @@
 @import "components/mainSoutien";
 @import "components/partenaire";
 @import "components/mainContact";
+@import "components/rapport";
