--- a/www/source/scss/object/_actuality.scss
+++ b/www/source/scss/object/_actuality.scss
@@ -47,6 +47,10 @@
    &__text{
      float: right;
      width: 45.3125em;
+     &--rapport{
+       width: 35em;
+       margin-left: 5.3em;
+     }
    }
  }
 
