--- a/www/views/contact.pug
+++ b/www/views/contact.pug
@@ -12,7 +12,7 @@ html(lang="fr")
     include template/header.pug
 
       main
-        div.contact__mainContainer
+        div.header__mainContainer
           section.mainContact
             h2.mainContact__title="Contact"
             p.mainContact__subtitle="Nos bureaux sont disponible dans plusieurs ville de Belgique Vous pouvez facilement trouver un bureau près de chez vous pour nous contacter."
