--- a/www/source/scss/object/_mainContact.scss
+++ b/www/source/scss/object/_mainContact.scss
@@ -5,7 +5,7 @@
  * coded by Dylan Schirino
  * started at 07/10/2016
  */
-.contact{
+.header{
   &__mainContainer{
     &::after{
       content: "";
