Adding country contact page with responsive

--- a/www/source/scss/main.scss
+++ b/www/source/scss/main.scss
@@ -34,6 +34,7 @@
 @import "object/partenaire";
 @import "object/mainContact";
 @import "object/rapport";
+@import "object/country";
 
 // 6. Components - Design des composants, morceaux d'UI
 @import "components/header";
@@ -49,3 +50,4 @@
 @import "components/partenaire";
 @import "components/mainContact";
 @import "components/rapport";
+@import "components/country";
