Adding header for TDS,clients,Sympathisant,étudiant with responsive

--- a/www/views/template/_navigation.pug
+++ b/www/views/template/_navigation.pug
@@ -39,6 +39,7 @@ section.navigation#menu
               a.profil__link(href="#")="Le point sur notre législation et les autres"
             li.profil__element.profil__element--etudiants
               a.profil__link(href="#")="Infos stage et intervention scolaire"
+
     div.navigation__container--right
       article.profil.profil--sympathisant
         h3.profil__title="Sympathisant"
@@ -46,9 +47,9 @@ section.navigation#menu
         div.profil__box.profil__box--sympathisant
           ul.profil__list
             li.profil__element.profil__element--sympathisant
-              a.profil__link(href="#")="Points fort de notre manifeste"
+              a.profil__link(href="sympathisant.html")="Points fort de notre manifeste"
             li.profil__element.profil__element--sympathisant
-              a.profil__link(href="#")="Le point sur notre législation et les autres"
+              a.profil__link(href="sympathisant.html")="Le point sur notre législation et les autres"
       article.profil.profil--clients
         h3.profil__title="Clients"
         p.profil__text="Vous êtes un client et vous avez des droits mais vous avez aussi des obligations et des précautions à prendre de votre côtés pour que tout se passe dans le respect de chaqu’un. Vous trouverez ici un petit guide du client pour en apprendre d’avantage."
