--- a/www/source/scss/main.scss
+++ b/www/source/scss/main.scss
@@ -35,6 +35,7 @@
 @import "object/mainContact";
 @import "object/rapport";
 @import "object/country";
+@import "object/sympathisant";
 
 // 6. Components - Design des composants, morceaux d'UI
 @import "components/header";
@@ -51,3 +52,4 @@
 @import "components/mainContact";
 @import "components/rapport";
 @import "components/country";
+@import "components/sympathisant";
